// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks macro › Skips globals: Skips globals 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const result = useAutoMemo(() => window.innerHeight);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var result = (0, _react.useMemo)(function () {
    return window.innerHeight;
  }, []);
}
"
`;

exports[`Hooks macro › Skips internal bindings with omonims: Skips internal bindings with omonims 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const v = 12;
  const value = [1, 2, 3];
  const result = useAutoMemo(() => value.map(v => v * 2));
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var v = 12;
  var value = [1, 2, 3];
  var result = (0, _react.useMemo)(function () {
    return value.map(function (v) {
      return v * 2;
    });
  }, [value]);
}
"
`;

exports[`Hooks macro › Skips internal bindings: Skips internal bindings 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = [1, 2, 3];
  const result = useAutoMemo(() => value.map(v => v * 2));
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = [1, 2, 3];
  var result = (0, _react.useMemo)(function () {
    return value.map(function (v) {
      return v * 2;
    });
  }, [value]);
}
"
`;

exports[`Hooks macro › Skips internal const bindings with omonims: Skips internal const bindings with omonims 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const v = 12;
  const result = useAutoMemo(() => {
    const v = 42;
    return v;
  });
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var v = 12;
  var result = (0, _react.useMemo)(function () {
    var v = 42;
    return v;
  }, []);
}
"
`;

exports[`Hooks macro › Skips internal destructuring bindings with omonims: Skips internal destructuring bindings with omonims 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const v = 12;
  const value = [1, 2, 3];
  const result = useAutoMemo(() => {
    const [v] = value;
    return v;
  });
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var v = 12;
  var value = [1, 2, 3];
  var result = (0, _react.useMemo)(function () {
    var v = value[0];
    return v;
  }, [value]);
}
"
`;

exports[`Hooks macro › Skips out of component bindings: Skips out of component bindings 1`] = `
"
import { useAutoMemo } from './hooks.macro'

const value = { a: { b: { c: 12 }} };

function FakeComponent() {
  const result = useAutoMemo(() => value.a['b'].c);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

var value = {
  a: {
    b: {
      c: 12
    }
  }
};

function FakeComponent() {
  var result = (0, _react.useMemo)(function () {
    return value.a['b'].c;
  }, []);
}
"
`;

exports[`Hooks macro › Throws if not called as function: Throws if not called as function 1`] = `
"
import { useAutoMemo } from './hooks.macro'

console.log(useAutoMemo);

      ↓ ↓ ↓ ↓ ↓ ↓

MacroError: useAutoMemo can only be used a function, and can not be passed around as an argument.
"
`;

exports[`Hooks macro › Works with external obj returning arrow: Works with external obj returning arrow 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = { a: { b: { c: 12 }} };
  const result = useAutoMemo(() => value.a['b'].c);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = {
    a: {
      b: {
        c: 12
      }
    }
  };
  var result = (0, _react.useMemo)(function () {
    return value.a['b'].c;
  }, [value]);
}
"
`;

exports[`Hooks macro › Works with external obj: Works with external obj 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = { a: { b: { c: 12 }} };
  const result = useAutoMemo(value.a['b'].c);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = {
    a: {
      b: {
        c: 12
      }
    }
  };
  var result = (0, _react.useMemo)(function () {
    return value.a['b'].c;
  }, [value]);
}
"
`;

exports[`Hooks macro › Works with external value returning arrow: Works with external value returning arrow 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = 12;
  const result = useAutoMemo(() => value);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = 12;
  var result = (0, _react.useMemo)(function () {
    return value;
  }, [value]);
}
"
`;

exports[`Hooks macro › Works with external value: Works with external value 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = 12;
  const result = useAutoMemo(value);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = 12;
  var result = (0, _react.useMemo)(function () {
    return value;
  }, [value]);
}
"
`;

exports[`Hooks macro › Works with function calls: Works with function calls 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  function callback() {}
  const result = useAutoMemo(() => callback());
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  function callback() {}

  var result = (0, _react.useMemo)(function () {
    return callback();
  }, [callback]);
}
"
`;

exports[`Hooks macro › Works with function experssions: Works with function experssions 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const value = 12;
  const result = useAutoMemo(function hallo() {
    return value * 2;
  });
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var value = 12;
  var result = (0, _react.useMemo)(function hallo() {
    return value * 2;
  }, [value]);
}
"
`;

exports[`Hooks macro › Works with null returning arrow: Works with null returning arrow 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const result = useAutoMemo(() => null);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var result = (0, _react.useMemo)(function () {
    return null;
  }, []);
}
"
`;

exports[`Hooks macro › Works with null: Works with null 1`] = `
"
import { useAutoMemo } from './hooks.macro'

function FakeComponent() {
  const result = useAutoMemo(null);
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _react = require(\\"react\\");

function FakeComponent() {
  var result = (0, _react.useMemo)(function () {
    return null;
  }, []);
}
"
`;
